--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Hello git</h1>
-    <p>Welcomt to the web</p>
+    <p>Welcomt to the web to create a blog app</p>
     <script src="app.js"></script>
   </body>
 </html>
